<resources>
    <string name="app_name">お年玉チャレンジ</string>
    <string name="settings_title">設定</string>
    <string name="overlay_help">枠内に番号を合わせてください</string>
    <string name="downloading_model_files">準備中…</string>
    <string name="recognition_result_title">認識結果</string>
    <string name="camera_permission_denied_title">権限エラー</string>
    <string name="camera_permission_denied_message">カメラの使用権限が得られません。設定アプリから「お年玉チャレンジ」のカメラの使用を許可して下さい。</string>
    <string name="alert_dialog_positive_button_title">OK</string>
    <string name="special">特等</string>
    <string name="first_class">1等</string>
    <string name="second_class">2等</string>
    <string name="third_class">3等</string>
    <string name="first_class_hint">くじ番号6桁を入力してください</string>
    <string name="second_class_hint">くじ番号下4桁を入力してください</string>
    <string name="third_class_hint">くじ番号下2桁を入力してください</string>
    <string name="special_class_hint_primary">B組番号4桁とくじ番号6桁を入力してください</string>
    <string name="special_class_hint_secondary">B組番号下1桁とくじ番号6桁を入力してください</string>
    <string name="edit_mode">編集</string>
    <string name="save_mode">保存</string>
    <string name="cancel">キャンセル</string>
    <string name="save_confirm_dialog_title">番号の保存</string>
    <string name="save_confirm_dialog_message">入力されたくじ番号を保存し、設定します。よろしいですか？</string>
    <string name="input_class_length_error_title">入力エラー</string>
    <string name="first_class_length_short">1等に入力されたくじ番号が6桁ではありません。</string>
    <string name="second_class_length_short">2等に入力されたくじ番号が4桁ではありません。</string>
    <string name="third_class_length_short">3等に入力されたくじ番号が2桁ではありません。</string>
    <string name="special_set_length_short">特等に入力された組番号の桁数に誤りがあります。</string>
    <string name="special_class_length_short">特等に入力されたくじ番号が6桁ではありません。</string>
    <string name="hit_first_class">おめでおとうございます！\n1等に当選しました！</string>
    <string name="hit_second_class">おめでおとうございます！\n2等に当選しました！</string>
    <string name="hit_third_class">おめでおとうございます！\n3等に当選しました！</string>
    <string name="hit_special_primary_class">おめでおとうございます！\n特等(1)に当選しました！</string>
    <string name="hit_special_secondary_class">おめでおとうございます！\n特等(2)に当選しました！</string>
</resources>
